// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the shuttles map with a selected stop matches snapshot 1`] = `
"<ShuttlesMap tileServerUrl=\\"https://mbta-map-tiles-dev.s3.amazonaws.com\\" shapes={{...}} stops={{...}} selectedStop={{...}}>
  <div className=\\"m-shuttles-map\\">
    <Component mapData={{...}} bounds={{...}} boundsByMarkers={false}>
      <Map bounds={{...}} center={{...}} zoom={[undefined]} maxZoom={18} minZoom={9} scrollWheelZoom={false} style={{...}} />
    </Component>
  </div>
</ShuttlesMap>"
`;

exports[`the shuttles map without a selected stop matches snapshot 1`] = `
"<ShuttlesMap tileServerUrl=\\"https://mbta-map-tiles-dev.s3.amazonaws.com\\" shapes={{...}} stops={{...}}>
  <div className=\\"m-shuttles-map\\">
    <Component mapData={{...}} bounds={{...}} boundsByMarkers={false}>
      <Map bounds={{...}} center={{...}} zoom={[undefined]} maxZoom={18} minZoom={9} scrollWheelZoom={false} style={{...}} />
    </Component>
  </div>
</ShuttlesMap>"
`;
